Fixed post container micro layout less overflow issues. The main issue now is an overflow when the filename is absurdly long. I will implement a form of string shortening. 4chan does this as well. This should solve most of these problems

--- a/pages/style.css
+++ b/pages/style.css
@@ -300,8 +300,14 @@ main {
 
 
     display:grid;
-    grid-template-columns: repeat(4, auto);
-    grid-template-rows: repeat(3, auto);
+    grid-template-columns: repeat(4, fit-content());
+
+    /* grid-template-columns: repeat(4, minmax(min-content,auto)); */
+    grid-template-rows: repeat(3, min-content);
+    justify-items: start;
+    align-items: center;
+    justify-content:start ;
+    align-content: center;
 
     column-gap: 0.04rem;
 
@@ -322,6 +328,8 @@ main {
     /* padding: 0.05rem; */
     color: var(--4chanName);
     font-weight: 700;
+    grid-column: 1/2;
+    grid-row: 1;
    
 
 }
@@ -329,6 +337,8 @@ main {
 .post-container-now{
     border: var(--smallborders);
     /* padding: 0.05rem; */
+    grid-column: 2/3;
+    grid-row: 1;
 
 
 
@@ -337,6 +347,8 @@ main {
 .post-container-no{
     border: var(--smallborders);
     /* padding: 0.05rem; */
+    grid-column: 3/4;
+    grid-row: 1;
 
 
 
@@ -356,6 +368,9 @@ main {
 .post-container-board{
     border: var(--smallborders);
     /* padding: 0.05rem; */
+    grid-column: 4;
+    grid-row: 1;
+
 
 }
 
